<resources>
    <string name="app_name">FocusCoding</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_analysis">AnalysisActivity</string>
    <string name="title_activity_sign_in_sign_up">SignInSignUpActivity</string>
    <string name="title_activity_pickone">Pick-a-Problem</string>
    <string name="bTestString">TEST</string>
    <string name="todayString">Today:</string>
    <string name="tvTotalString">2</string>
    <string name="tvCountString">0</string>
    <string name="slashString">/</string>
    <string name="tvSettingString">Settings</string>
    <string name="tvTodayGoalString">Today\'s Goal:</string>
    <string name="tvProblemsString">Problems</string>
    <string name="tvReminderTimeString">Reminder Time:</string>
    <string name="etRemindTimeString">00:00:00</string>
    <string name="tvLocationString">Location Services:</string>
    <string name="bSaveString">Save</string>
    <string name="bShowAnalysisString">SHOW ANALYSIS</string>
    <string name="tvMPSLString">Most problems solving location:</string>
    <string name="ivLocationString">String</string>
    <string name="tvMPSDString">Most problems solving date:</string>
    <string name="MPSDString">12 - 5 - 2014</string>
    <string name="tvETFString">Earliest time finished:</string>
    <string name="etETFString">11:00 / 02 - 14 - 2015</string>
    <string name="bBackString">back</string>
    <string name="tvUserNameString">UserName</string>
    <string name="tcPSWString">Password</string>
    <string name="tvEmailString">Email</string>
    <string name="tvLeetCodeStrin">Leetcode Username</string>
    <string name="tcLeetCodePSWString">Leetcode Password</string>
    <string name="bSignInString">Sign in</string>
    <string name="bStartString">START</string>
    <string name="tvTodayString">Progress:</string>
    <string name="tvMainCountString">0</string>
    <string name="tvSlashString">/</string>
    <string name="tvMainTotalString">2</string>
    <string name="tvSolvedPrString">110</string>
    <string name="ivRedString">image</string>
    <string name="ivGreyString">image</string>
    <string name="tvTotalPrString">330</string>
    <string name="title_activity_linkin">Linkin</string>
    <string name="linkLeetString">LEET LOGIN</string>
    <string name="LinkINString">Link In</string>
</resources>
