<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.UI_AnalysisActivity"
    tools:showIn="@layout/activity_analysis">
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Analysis"
            android:textSize="50dp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"

            android:textColor="#ed7474"
            android:id="@+id/textView8" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvMPSLString"
        android:textStyle="bold"
        android:textColor="#888888"
        android:id="@+id/tvMPSL"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true" />


    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/ivLocation"
        android:background="@drawable/map"
        android:layout_marginLeft="80dp"
        android:contentDescription="@string/ivLocationString"
        android:layout_below="@+id/tvMPSL"
        android:layout_alignEnd="@+id/etMPSdate" />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvMPSDString"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#888888"
        android:layout_marginTop="250dp"
        android:id="@+id/tvMPSD"

        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:text="@string/MPSDString"
        android:textSize="25sp"
        android:textColor="#f39f9f"
        android:layout_marginLeft="100dp"
        android:ems="10"
        android:id="@+id/etMPSdate"
        android:layout_below="@+id/tvMPSD"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvETFString"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:id="@+id/tvETF"
        android:layout_below="@+id/etMPSdate"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:text="@string/etETFString"
        android:textSize="25sp"
        android:textColor="#f39f9f"
        android:layout_marginLeft="50dp"
        android:ems="10"
        android:id="@+id/etETF"
        android:layout_below="@+id/tvETF"
        android:layout_centerHorizontal="true" />




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bBackString"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:id="@+id/bBack"
        android:onClick="onBack"
        android:background="@drawable/button_nalysis"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
