<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.UI_TaskActivity"
    tools:showIn="@layout/activity_task">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:columnCount="5">


        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chronometer1"
            android:textSize="50sp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:format="00:00:00" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/bTestString"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:background="@drawable/button_test"
            android:id="@+id/bTest"
            android:onClick="onTest"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="87dp"
            android:layout_below="@+id/chronometer1"
            android:layout_centerHorizontal="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="450dp"
            android:text="@string/tvTodayString"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/tvToday"
            android:textColor="#691e0b"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#4c4c4c"
            android:textSize="30sp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="450dp"
            android:text="@string/tvCountString"
            android:id="@+id/tvCount"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#4c4c4c"
            android:text="@string/slashString"
            android:textSize="30sp"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="450dp"
            android:id="@+id/tvSlash"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#ff0000"
            android:text="@string/tvTotalString"
            android:textSize="30sp"
            android:id="@+id/tvTotal"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="450dp"
            />



    </RelativeLayout>
</RelativeLayout>
