<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.UI_SigninActivity"
    tools:showIn="@layout/activity_signin">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topLinear">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvUserNameString"
            android:textSize="25sp"
            android:textColor="#888888"
            android:textStyle="bold"
            android:id="@+id/tvUserName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUsr"
            android:inputType="text" />
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/secondLinear">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tcPSWString"
            android:textSize="25sp"
            android:textColor="#888888"
            android:textStyle="bold"
            android:id="@+id/tvPSW" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPsw"
            android:inputType="textPassword" />
    </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/bSignInString"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/button_test"
        android:id="@+id/bSignIn"
        android:onClick="onSignIn"
        android:layout_alignTop="@+id/bLinkLeet"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/button_test"
        android:id="@+id/bLinkLeet"
        android:onClick="onLinkLeet"
        android:text="@string/linkLeetString"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/linearLayout2"
        android:layout_marginBottom="57dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="If you do not have an account?"
        android:textSize="20sp"
        android:textColor="#888888"
        android:textStyle="normal|bold"
        android:id="@+id/tvEmail"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SIGN UP"
        android:id="@+id/button2"
        android:layout_below="@+id/tvEmail"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:textColor="#4574db" />


</RelativeLayout>
